# remote-vnc

./: README.md  REMOTE_DESKTOP_TECH_PLAN.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: ice.ts  room.ts  useLocalStorageState.ts
src/protocol/: control.ts  signaling.ts  webrtcSignal.ts
src/screens/: ClientScreen.tsx  ConnectionsScreen.tsx  HomeScreen.tsx  HostScreen.tsx  NewConnectionScreen.tsx  SessionScreen.tsx
